# birdnet-labeller

./: .gitignore  README.md  pyproject.toml
birdnet_labeller/: __init__.py
